# L402sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PROJECT.md  README.md
.github/workflows/: check-npm-releases.yml  ci.yml  publish-bolt402-ai-sdk.yml  publish-bolt402-python.yml  publish-bolt402-wasm.yml  publish-l402-ai-sdk.yml  publish-l402-langchain.yml  publish-l402-python.yml
bindings/bolt402-go/: README.md  bolt402.go  bolt402_test.go  go.mod
crates/bolt402-core/: Cargo.toml
crates/bolt402-core/src/: budget.rs  cache.rs  client.rs  lib.rs
crates/bolt402-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/bolt402-ffi/include/: bolt402.h
crates/bolt402-ffi/src/: lib.rs
crates/bolt402-lnd/: Cargo.toml
crates/bolt402-lnd/src/: backend.rs  error.rs  grpc.rs  lib.rs  rest.rs
crates/bolt402-mcp/: Cargo.toml
crates/bolt402-mcp/src/: cli.rs  main.rs  server.rs
crates/bolt402-mock/: Cargo.toml
crates/bolt402-mock/src/: backend.rs  challenge.rs  lib.rs
crates/bolt402-nwc/: Cargo.toml
crates/bolt402-nwc/src/: backend.rs  error.rs  lib.rs
crates/bolt402-proto/: Cargo.toml
crates/bolt402-proto/src/: challenge.rs  client_error.rs  lib.rs  port.rs
crates/bolt402-python/src/: lib.rs
crates/bolt402-sqlite/: Cargo.toml
crates/bolt402-sqlite/src/: error.rs  lib.rs  store.rs
crates/bolt402-swissknife/: Cargo.toml
crates/bolt402-swissknife/src/: backend.rs  lib.rs  types.rs
crates/bolt402-wasm/: Cargo.toml  README.md
crates/bolt402-wasm/src/: backends.rs  client.rs  lib.rs
crates/bolt402-wasm/tests/: web.rs
crates/bolt402-wasm/tests/node/tests/: regtest.test.ts
crates/l402-proto/: Cargo.toml
crates/l402-proto/src/: lib.rs  mpp.rs
crates/l402-python/: pyproject.toml
crates/l402-python/python/l402/: __init__.py
demos/comparison/: .gitignore  README.md  package.json
demos/comparison/src/app/: globals.css  layout.tsx  page.tsx
demos/comparison/src/components/: CodeBlock.tsx  FeatureTable.tsx  LanguageTabs.tsx
demos/comparison/src/lib/: highlight.ts  snippets.ts
demos/l402-explorer/: .env.example  next.config.ts  package.json
demos/l402-explorer/src/app/: page.tsx
demos/l402-explorer/src/app/api/chat/: route.ts
demos/l402-explorer/src/app/api/l402-fetch/: route.ts
demos/l402-explorer/src/app/api/l402-receipts/: route.ts
demos/l402-explorer/src/components/: ChatPanel.tsx  ServiceBrowser.tsx  ServiceCard.tsx
demos/l402-explorer/src/lib/: bolt402-tools.ts  index-api.ts  l402-shared.ts  mock-backend.ts  types.ts
docs/: architecture.md
docs/design/: 001-l402-client.md  002-mock-server.md  003-lnd-backend.md  004-swissknife-backend.md  012-comparison-page.md  012-mcp-server.md  042-go-bindings.md  045-wasm-bindings.md  067-mpp-protocol.md
tests/regtest/: docker-compose.yml
