[package]
name = "bolt402-ffi"
description = "C-compatible FFI layer for bolt402 L402 client SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
categories = ["api-bindings"]
keywords = ["l402", "lightning", "bitcoin", "ffi", "c"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
bolt402-proto = { workspace = true }
bolt402-core = { workspace = true }
bolt402-mock = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }

[build-dependencies]
cbindgen = "0.28"

[lints]
workspace = true
