[package]
name = "bolt402-lnd"
description = "LND gRPC backend adapter for bolt402 L402 client SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
categories = ["authentication", "web-programming::http-client"]
keywords = ["l402", "lightning", "bitcoin", "lnd", "grpc"]

[dependencies]
bolt402-core = { workspace = true }
async-trait = { workspace = true }
fedimint-tonic-lnd = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
